objects/cscrm__Address__c.object
<CustomObject>
    <description>The Address object holds details of addresses associated with an Account.  An Address can be used for multiple purposes. In a B2B example an Address could be all of the following:
- the registered office address for the Account;
- the billing address; and
- an installation address for a specific technical service.</description>
    <fields>
        <fullName>cscrm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Address_Details__c</fullName>
        <formula>IF( ISBLANK(cscrm__Street__c) , &apos;&apos;, cscrm__Street__c +&apos;,&apos;) + 
IF( ISBLANK(cscrm__State_Province__c) , &apos;&apos;, &apos; &apos; + cscrm__State_Province__c +&apos;,&apos;) + 
IF( ISBLANK(cscrm__City__c) , &apos;&apos;, &apos; &apos; + cscrm__City__c +&apos;,&apos;) + 
IF( ISBLANK(cscrm__Zip_Postal_Code__c) , &apos;&apos;, &apos; &apos; + cscrm__Zip_Postal_Code__c +&apos;,&apos;) + 
IF( ISBLANK(cscrm__Country__c) , &apos;&apos;, &apos; &apos; + cscrm__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Building_Name__c</fullName>
        <label>Building Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Building_Number__c</fullName>
        <label>Building Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Building_Type__c</fullName>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__External_Address_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Address Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cscrm__External_ID__c</fullName>
        <description>The ID of this Address in an external address database.</description>
        <inlineHelpText>The ID of this Address in an external address database.</inlineHelpText>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Geolocation__c</fullName>
        <description>The latitude/longitude coordinates of this address.</description>
        <inlineHelpText>The latitude/longitude coordinates of this address.</inlineHelpText>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>cscrm__Is_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Is_Installation_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Installation Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Is_Registered_Office_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Registered Office Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Is_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Level_Number__c</fullName>
        <label>Level Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Level_Type__c</fullName>
        <label>Level Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Plan_Number__c</fullName>
        <label>Plan Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Property_Name__c</fullName>
        <label>Property Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Street_Name__c</fullName>
        <label>Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Street_Number_End__c</fullName>
        <label>Street Number End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Street_Number_Start__c</fullName>
        <label>Street Number Start</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Street_Type__c</fullName>
        <label>Street Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Avenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suite</fullName>
                </value>
                <value>
                    <fullName>Room</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>cscrm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>